# flask_util_js

./: README.md  flask_util_js.py  pyproject.toml  setup.py
example/: main.py
example/templates/: index.html
examples/: main.py
